<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Einstellungen</string>
    <string name="app_name">Projekt Termine</string>
    <string name="project_overview">Projektübersicht</string>
    <string name="sharepoint_auth">Authentifizieren</string>
    <string name="welcome">Herzlich Willkommen! Fügen Sie einen Server über die Einstellungen hinzu, um Termine anzuzeigen.</string>
    <string name="serverURL">https://WEBSITE-NAME.sharepoint.com</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="save">Speichern</string>
    <string name="login">Login</string>
    <string name="title_activity_add_server">Server hinzufügen</string>
    <string name="hello_world">Hello world!</string>
    <string name="test">Test</string>
    <string name="title_activity_select_calender">Kalender auswählen</string>
    <string name="refresh">Aktualisieren</string>
    <string name="add_server_desc_text">Bitte geben Sie die Internetadresse der SharePoint-Webseite ein, von der Sie Projekttermine anzeigen wollen. (Bspw.: https://contoso.sharepoint.com)</string>
    <string name="wait_while_loading">Bitte warten, Daten werden geladen...</string>
    <string name="login_successful">Login erfolgreich...</string>
    <string name="login_error">Es gab ein Problem während des Loginvorgangs. Bitte versuchen Sie es erneut!</string>
    <string name="parsing_data">Daten werden verarbeitet...</string>
    <string name="logout">Logout</string>
    <string name="url_not_found">Die URL konnte nicht gefunden werden!</string>
    <string name="bad_response">Die Serverantwort war fehlerhaft!</string>
    <string name="please_relogin">Sitzung ungültig! Bitte melden Sie sich erneut an!</string>

</resources>